# xng-rs

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  LICENSE.txt  README.md  build.rs  default.nix  flake.nix  generate-bindings.sh  index.html  search-index.js  settings.html  shell.nix  source-files.js  wrapper.h
.github/workflows/: doc.yml  rust.yml
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/xng_rs/time/: trait.DurationFromInt.js
nix/: nixpkgs.nix  sources.json
src/: console.rs  lib.rs  panic.rs  partition.rs  prelude.rs  raw_bindings.rs  time.rs  types.rs  vcpu.rs
src/bindings/: 32.rs  64.rs  mod.rs
src/port/: mod.rs  sampling.rs
src/xng_rs/: lib.rs.html  partition.rs.html  prelude.rs.html  raw_bindings.rs.html  time.rs.html  vcpu.rs.html
src/xng_rs/port/: mod.rs.html  sampling.rs.html
util/: generate-bindings.sh  wrapper.h
xng_rs/: all.html  enum.XngError.html  index.html  macro.cstr.html  macro.to_traceable_error!.html  macro.to_traceable_error.html  sidebar-items.js  struct.XngErrorTrace.html
xng_rs/partition/: fn.halt.html  fn.id.html  fn.my_id.html  index.html  sidebar-items.js  type.PartitionId.html
xng_rs/port/: index.html  sidebar-items.js  struct.SamplingPortStatus.html  struct.SamplingReceiver.html  struct.SamplingSender.html  type.SamplingPortId.html
xng_rs/port/sampling/: struct.SamplingPortStatus.html  struct.SamplingReceiver.html  struct.SamplingSender.html  type.SamplingPortId.html
xng_rs/prelude/: index.html  sidebar-items.js  struct.CStr.html  struct.Duration.html
xng_rs/time/: enum.TimeError.html  fn.since_boot.html  index.html  sidebar-items.js  struct.Duration.html  trait.DurationFromInt.html
xng_rs/vcpu/: fn.finish_slot.html  index.html  sidebar-items.js  type.VCpuId.html
