[package]
name = "xng-rs"
version = "0.1.0"
authors = ["Wanja Zaeske <wanja.zaeske@dlr.de>"]
edition = "2021"
license-file = "LICENSE"
documentation = "https://aeronautical-informatics.github.io/xng-rs"

[badges]
github = { repository = "aeronautical-informatics/xng-rs" }
is-it-maintained-open-issues = { repository = "aeronautical-informatics/xng-rs" }
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core2 = { version = "*", default-features = false }
cty = "*"
cstr_core = { version = "*", default-features = false }

[build-dependencies]
bindgen = "*"

[features]
default = [ "std" ]
# enabling this feature disables the panic_handler adapter to XNG's health monitoring
std = []
